# Macro-investment-support-program

./: .env.example  .gitignore  PROGRESS.md  PROJECT_SPEC.md  README.md  install.bat  package.json  pyproject.toml  run.bat  run_ingest2_web.py
.claude/: launch.json
backend/: batch_analyze.py  debug_guidance.py  finvision.db  requirements.txt
backend/app/: config.py  database.py  main.py
docs/: AI_REMOVAL_AUDIT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
ingest2/: DESIGN.md  PLAN.md  __init__.py  llm.py  run.py  schema.py
ingest2/analyze/: __init__.py  score.py
ingest2/candidates/: __init__.py  adapter.py  pipeline.py  prescore.py  run_live.py
ingest2/classify/: __init__.py  basic.py  deep.py  events.py  tickers.py
ingest2/collect/: __init__.py  base.py  polygon_news.py  registry.py  rss.py  sec_edgar.py
ingest2/dedup/: __init__.py  cluster.py  embed.py
ingest2/filter/: __init__.py  basic.py
src/: __init__.py  cli.py  config.py  cost_guard.py  llm.py  prompting.py
tests/: test_causal_edges.py  test_causal_graph.py  test_causal_ripple.py  test_causal_story.py  test_cluster.py  test_cost_guard.py  test_impact.py  test_lifecycle_link.py  test_lifecycle_state.py  test_lifecycle_store.py  test_macro_fred.py  test_macro_themes.py  test_novelty.py  test_price_reaction.py  test_prompting.py  test_report.py  test_research_schema.py  test_schema.py  test_universe.py
ui/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+129 files in other folders)
