[project]
name = "finvision"
version = "0.1.0"
description = "AI-driven causal story generator for KR/US market news"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "polygon-api-client>=1.14",
    "yfinance>=0.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "rich>=13",
    "tenacity>=8",
    "networkx>=3.6.1",
    "feedparser>=6.0.12",
    "tavily-python>=0.7.26",
    "parallel-web>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
